# pokedex

./: pyproject.toml
pokedex/: main.py
web/: index.html  script.js  style.css
