[tool.poetry]
name = "projeto-pokedex"
version = "0.1.0"
description = ""
authors = ["matheuslpolidoro <mattpolidoro4@gmail.com>"]
readme = "README.md"
packages = [{include = "projeto_pokedex"}]

[tool.poetry.dependencies]
python = "^3.11"
pokebase = "^1.3.0"
eel = "^0.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
